Add Fortify Scan to ccd-case-migration-starter pipeline (#24)
* Add Forfiy ccd-case-migration-starter.  NOTE: Awaiting Fortify client release ID

* Update build.gradle

* Add Fortify client release ID (110062)

* Add temporary suppressions

Co-authored-by: JamesCollettCGI <james.collett@hmcts.net>
Co-authored-by: Kiran Yenigala <kiran.yenigala@nihr.ac.uk>